# multiagent-explore

./: Cargo.toml  PRD.md  README.md  USER_GUIDE.md  create_gif.sh  demo.sh  run_simulation.sh
maps/: island_room.map  l_shaped_room.map  sample_room.map  simple_corridor.map
python_viz/: create_demo_gif.py  debug_output.py  simple_gif_test.py  visualizer.py
src/: constants.rs  lib.rs  main.rs  map_loader.rs  map_manager.rs  path_planner.rs  robot_node.rs  simulation_manager.rs  types.rs  visualize.rs
src/robot_node/: boundary_analysis.rs  mod.rs  phase_trait.rs  wall_following.rs
src/robot_node/phases/: boundary_analysis.rs  boundary_scouting.rs  central_scan.rs  interior_sweep.rs  island_escape.rs  mod.rs  wall_find.rs
tests/: integration_tests.rs  robot_node.rs  types.rs
