[package]
name = "multiagent_explore"
version = "0.1.0"
edition = "2021"
authors = ["Adam A Holmes <adamaholmes@gmail.com>"]
description = "Coordinated Multi-Robot Exploration in Rust"
license = "MIT"

[lib]
name = "multiagent_explore"
path = "src/lib.rs"

[[bin]]
name = "multiagent_explore"
path = "src/main.rs"

[dependencies]
rand = "0.8"
eframe = "0.27"
egui = "0.27"

[dev-dependencies] 